    - fstype_alias.diff
    - rpc.lockd-startup-fix.diff
  * Use XZ to compress orig source tarball
  * Make get-orig-source tarball reproducible
  * Use new preferred hostname for upstream SVN with HTTPS
    (svn.freebsd.org).
  * Bump Build-Depends: kfreebsd-kernel-headers to (>= 10.3~2~)
  * Bump Build-Depends: libutil-freebsd-dev to (>= 10.3~svn296373-4~)
    for kinfo_getvmobject

 -- Steven Chamberlain <steven@pyro.eu.org>  Mon, 04 Apr 2016 11:16:07 +0100

freebsd-utils (10.1~svn273304+ds1-1) unstable; urgency=medium

  [ Steven Chamberlain ]
  * Upload to unstable
  * Support +ds source_version suffix in svn_revision

  [ Hideki Yamane ]
  * Add jls(8) and jexec(8) tools for jails administration
    (Closes: #806562)

 -- Steven Chamberlain <steven@pyro.eu.org>  Tue, 08 Dec 2015 18:52:10 +0000

freebsd-utils (10.1~svn273304-2) experimental; urgency=medium

  * fstype_alias.diff:  accept some Linux-style names for `mount -t`
    filesystem types:
    - ext2 for ext2fs
    - ext3 for ext3fs
    - ext4 for ext4fs
    - cifs for smbfs

 -- Steven Chamberlain <steven@pyro.eu.org>  Sun, 26 Oct 2014 18:50:21 +0000

freebsd-utils (10.1~svn273304-1) unstable; urgency=medium

  [ Petr Salinger ]
  * Build-Depend on freebsd-mk >= 10.0-5 for MK_HYPERV

  [ Steven Chamberlain ]
  * New upstream snapshot of 10.1-RC3~
  * Refresh patches: (with unexpanded revision tags;  a/ b/ paths;  no
    Index field;  no 'C function' context, not applicable here)
    - ppp_macros.diff
    - 035_nfs.diff
    - makefiles.diff
  * Delete patch mk_tests.diff: freebsd-mk now provides MK_TESTS
  * No longer try to set MK_TESTS in debian/rules;  use WITHOUT_TESTS
    instead
  * Set kern.ipc.shmall=32768 in /etc/sysctl.conf, as the kernel
    default is too low for some Qt applications (Closes: #763706)
  * netstat: work around a kfreebsd 9->10 ABI break;  allows tcp sockets
    to be shown again when running on kfreebsd-9 (Closes: 761418)
