@@ -14,7 +14,7 @@ Build-Depends: debhelper (>= 7), po-debconf, sharutils,
  freebsd-glue (>= 0.2.17~),
  kfreebsd-kernel-headers (>= 10.3~2~),
 # for kdump
- kfreebsd-headers-10.1-0,
+ kfreebsd-headers-10.3-0,
  libc0.1-dev (>= 2.18-2~),
  libbsd-dev (>= 0.3.0),
 # zlib1g-dev: savecore
