@@ -68,16 +68,16 @@
  ioctl.c: mkioctls
  	env MACHINE=${MACHINE} CPP="${CPP}" \
 -	    sh ${.CURDIR}/mkioctls print ${DESTDIR}/usr/include > ${.TARGET}
-+	    sh ${.CURDIR}/mkioctls print /usr/src/kfreebsd-headers-10.1-0/sys > ${.TARGET}
++	    sh ${.CURDIR}/mkioctls print /usr/src/kfreebsd-headers-10.3-0/sys > ${.TARGET}
  
  kdump_subr.h: mksubr
 -	sh ${.CURDIR}/mksubr ${DESTDIR}/usr/include | \
-+	sh ${.CURDIR}/mksubr /usr/src/kfreebsd-headers-10.1-0/sys | \
++	sh ${.CURDIR}/mksubr /usr/src/kfreebsd-headers-10.3-0/sys | \
  	    sed -n 's/^\([a-z].*)\)$$/void \1;/p' >${.TARGET}
  
  kdump_subr.c: mksubr kdump_subr.h
 -	sh ${.CURDIR}/mksubr ${DESTDIR}/usr/include >${.TARGET}
-+	sh ${.CURDIR}/mksubr /usr/src/kfreebsd-headers-10.1-0/sys >${.TARGET}
++	sh ${.CURDIR}/mksubr /usr/src/kfreebsd-headers-10.3-0/sys >${.TARGET}
  .if (${MACHINE_ARCH} == "amd64" || ${MACHINE_ARCH} == "i386")
  	sh ${.CURDIR}/../../sys/kern/makesyscalls.sh \
  	    ${.CURDIR}/../../sys/${MACHINE_ARCH}/linux/syscalls.master ${.CURDIR}/linux_syscalls.conf
