@@ -18,6 +18,7 @@ freebsd-utils (10.3~svn296373-1) UNRELEASED; urgency=medium
   * Bump Build-Depends: kfreebsd-kernel-headers to (>= 10.3~2~)
   * Bump Build-Depends: libutil-freebsd-dev to (>= 10.3~svn296373-4~)
     for kinfo_getvmobject
+  * Bump Build-Depends: kfreebsd-headers-10.1-0 to 10.3-0
 
  -- Steven Chamberlain <steven@pyro.eu.org>  Mon, 04 Apr 2016 11:16:07 +0100
 
